samples/guestbook/ingress/ingress-http.yml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
  name: guestbook-ingress-http
  namespace: guestbook
spec:
  rules:
  - host: ingress-http.guestbook.com
    http:
      paths:
      - backend:
          serviceName: guestbook
          servicePort: 80
